home page with tumbnails

--- a/frontend/src/app/components/partial/header/header.component.html
+++ b/frontend/src/app/components/partial/header/header.component.html
@@ -1,6 +1,9 @@
 <header>
     <div class="container">
-        <a routerLink="/" class="logo">IronBot</a>
+        <a routerLink="/" class="logo">
+            <!-- <img src="src/assets/IronBotLogo.png" alt="IronBot"> -->
+            IronBot
+        </a>
         <nav>
             <ul>
                 <li>
