--- a/frontend/src/app/components/partial/header/header.component.html
+++ b/frontend/src/app/components/partial/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="container">
         <a routerLink="/" class="logo">
-            <!-- <img src="src/assets/IronBotLogo.png" alt="IronBot"> -->
+            <!-- <img src="assets/IronBotLogo.png" alt="IronBot"> -->
             IronBot
         </a>
         <nav>
