--- a/frontend/src/app/components/partial/header/header.component.css
+++ b/frontend/src/app/components/partial/header/header.component.css
@@ -64,3 +64,11 @@ a span{
     width: 100%;
     min-width: 8rem;
 }
+
+.IronBotLogo {
+    width: 100px;
+}
+
+.topmargin10 {
+    margin-top: 10px;
+}
