--- a/frontend/src/app/components/partial/header/header.component.html
+++ b/frontend/src/app/components/partial/header/header.component.html
@@ -1,11 +1,10 @@
 <header>
     <div class="container">
         <a routerLink="/" class="logo">
-            <!-- <img src="assets/IronBotLogo.png" alt="IronBot"> -->
-            IronBot
+            <img src="assets/IronBotLogo.png" alt="IronBot" class="IronBotLogo">
         </a>
         <nav>
-            <ul>
+            <ul class="topmargin10">
                 <li>
                     <a routerLink="/login">Login</a>
                 </li>
