--- a/frontend/src/app/components/pages/robot-page/robot-page.component.html
+++ b/frontend/src/app/components/pages/robot-page/robot-page.component.html
@@ -38,7 +38,7 @@
             </span>
         </div>
 
-        <button>Add to Cart</button>
+        <button (click)="addToCart()">Add to Cart</button>
 
     </div>
 </div>
