--- a/frontend/src/app/components/partial/header/header.component.html
+++ b/frontend/src/app/components/partial/header/header.component.html
@@ -18,7 +18,7 @@
                 </li>
                 <li>
                     <a routerLink="/cart-page">
-                        Cart <span>3</span>
+                        Cart <span *ngIf="cartQuantity">{{cartQuantity}}</span>
                     </a>
                 </li>
             </ul>
