Login Partr 2 - Login / Logout

--- a/frontend/src/app/components/partial/header/header.component.html
+++ b/frontend/src/app/components/partial/header/header.component.html
@@ -5,15 +5,15 @@
         </a>
         <nav>
             <ul class="topmargin10">
-                <li>
+                <li *ngIf="!isAuth">
                     <a routerLink="/login">Login</a>
                 </li>
-                <li class="menu-container">
-                    <a routerLink="/dashboard">Peter</a>
+                <li *ngIf="isAuth" class="menu-container">
+                    <a routerLink="/dashboard">{{user.name}}</a>
                     <div class="menu">
                         <a routerLink="/profile">Profile</a>
                         <a routerLink="/orders">Orders</a>
-                        <a>Logout</a>
+                        <a (click)="logout()">Logout</a>
                     </div>
                 </li>
                 <li>
